tests/paczka1/small_fuzzy/48489702.err
Error in line 6: REj S898 73,82
Error in line 9: SNJ S0 10,2
Error in line 12: SNJ S0 6,9
Error in line 16: XKxg S0 79,9
